major update (all functionalities)

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,11 +11,14 @@
             <MenuItem x:Name="Open" Header="Open" Click="Open_Click"/>
             <MenuItem x:Name="Exit" Header="Exit" Click="Exit_Click"/>
         </ToolBar>
-        <TreeView x:Name="treeView" Margin="0,30,500,0">
+        <TreeView x:Name="treeView" Margin="0,30,500,0" >
         </TreeView>
         <ScrollViewer HorizontalAlignment="Right">
             <TextBlock x:Name ="textBlock" Height="Auto" TextWrapping="Wrap" Width="480"/>
         </ScrollViewer>
+        <StatusBar Width="Auto" VerticalAlignment="Bottom" Height="20">
+            <TextBlock x:Name="statusText" TextWrapping="Wrap"/>
+        </StatusBar>
 
     </Grid>
 </Window>
