--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WPF_PT_LAB2_ATTEMPT3.App"
+﻿<Application x:Class="WPF_FileManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPF_PT_LAB2_ATTEMPT3"
+             xmlns:local="clr-namespace:WPF_FileManager"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
