--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WPF_PT_LAB2_ATTEMPT3.MainWindow"
+﻿<Window x:Class="WPF_FileManager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF_PT_LAB2_ATTEMPT3"
+        xmlns:local="clr-namespace:WPF_FileManager"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
